2단계 - 요구 사항 정리 (#821)
* feat(stringCalculator) : 문자열 덧셈 계산기 기능 구현 및 테스트 코드

* feat(stringCalculator) : refactoring(class 분리, 비즈니스 흐름 변경, ...)

* feat(stringCalculator) : refactoring(예외 케이스 테스트 코드 추가)

* feat(stringCalculator) : refactoring(Number 클래스 정리)

* feat(stringCalculator) : refactoring(정적 클래스 변수 선언)

* feat(stringCalculator) : refactoring(Number 테스트 코드 추가)

* feat(stringCalculator) : refactoring(Delimiter 테스트 코드 추가)

* feat(stringCalculator) : refactoring(상수화, 메소드명 변경, 리턴타입 변경(String[] > List))

* feat(stringCalculator) : refactoring(일급 클래스 사용(Numbers))

* feat(stringCalculator) : refactoring(커스텀 예외 처리(NegativeNumberException) 추가)

* feat(stringCalculator) : refactoring(Exception 변경, Number wrapping)

* feat(stringCalculator) : refactoring(final 선언, toList() 변경, 불필요한 변수 삭제)

* feat(kitchenpos) : kitchenpos 요구사항 정리

* feat(kitchenpos) : kitchenpos 요구사항 정리 (모델링 이미지 추가)

* feat(kitchenpos) : kitchenpos 요구사항 정리 (수정 및 추가)